# xscroller

./: INSTALL  Makefile.am  NEEDED  clean.sh  compile.sh  configure.ac  libppx.c  libppx.h  libxscroller.c  libxscroller.h  test.xml  testxml.c  testxml.sh
lib/: Makefile.am  libxscroller.c  xscroller.h
libppx/: libppx.h  test.xml  testxml.c  testxml.sh
src/: Makefile.am  xscroller.c
